--- a/src/book.adoc
+++ b/src/book.adoc
@@ -22,6 +22,7 @@ include::style.adoc[]
 include::features.adoc[]
 include::child_processes.adoc[]
 include::deps_clj.adoc[]
+include::recipes.adoc[]
 
 //include::shell_integration.adoc[]
 
