--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -73,7 +73,7 @@ library.
 
 include::usage/repl.adoc[]
 
-== Preloads
+=== Preloads
 
 The environment variable `BABASHKA_PRELOADS` allows to define code that
 will be available in all subsequent usages of babashka.
@@ -103,7 +103,7 @@ export BABASHKA_PRELOADS='(load-file "my_awesome_prelude.clj")'
 
 Note that `*input*` is not available in preloads.
 
-== Classpath
+=== Classpath
 
 Babashka accepts a `--classpath` option that will be used to search for
 namespaces when requiring them:
@@ -181,3 +181,285 @@ namespace which allows dynamically adding to the classpath.
 
 See link:#deps_clj[deps.clj] for a babashka script that replaces the `clojure`
 bash script.
+
+=== Uberscript
+
+The `--uberscript` option collects the expressions in
+`BABASHKA_PRELOADS`, the command line expression or file, the main
+entrypoint and all required namespaces from the classpath into a single
+file. This can be convenient for debugging and deployment.
+
+Here is an example that uses a function from the
+https://github.com/clj-commons/fs[clj-commons/fs] library.
+
+Let's first set the classpath:
+
+[source,clojure]
+----
+$ export BABASHKA_CLASSPATH=$(clojure -Spath -Sdeps '{:deps {clj-commons/fs {:mvn/version "1.5.2"}}}')
+----
+
+Write a little script, say `glob.clj`:
+
+[source,clojure]
+----
+(ns foo (:require [me.raynes.fs :as fs]))
+(run! (comp println str)
+      (fs/glob (first *command-line-args*)))
+----
+
+Now we can execute the script which uses the library:
+
+[source,bash]
+----
+$ time bb glob.clj '*.md'
+/Users/borkdude/Dropbox/dev/clojure/carve/README.md
+bb glob.clj '*.md'   0.03s  user 0.02s system 70% cpu 0.064 total
+----
+
+Producing an uberscript with all required code:
+
+[source,bash]
+----
+$ bb -f glob.clj --uberscript glob-uberscript.clj
+----
+
+To prove that we don't need the classpath anymore:
+
+[source,bash]
+----
+$ unset BABASHKA_CLASSPATH
+$ time bb glob-uberscript.clj '*.md'
+/Users/borkdude/Dropbox/dev/clojure/carve/README.md
+bb glob-uberscript.clj '*.md'   0.03s  user 0.02s system 93% cpu 0.049 total
+----
+
+Caveats:
+
+* _Dynamic requires_. Building uberscripts works by running top-level
+`ns` and `require` forms. The rest of the code is not evaluated. Code
+that relies on dynamic requires may not work in an uberscript.
+* _Resources_. The usage of `io/resource` assumes a classpath, so when
+this is used in your uberscript, you still have to set a classpath and
+bring the resources along.
+
+If any of the above is problematic for your project, using an
+link:#uberjar[uberjar] is a good alternative.
+
+==== Carve
+
+Uberscripts can be optimized by cutting out unused vars with
+https://github.com/borkdude/carve[carve].
+
+[source,bash]
+----
+$ wc -l glob-uberscript.clj
+     607 glob-uberscript.clj
+$ clojure -M:carve --opts '{:paths ["glob-uberscript.clj"] :aggressive true :silent true}'
+$ wc -l glob-uberscript.clj
+     172 glob-uberscript.clj
+----
+
+Note that the uberscript became 72% shorter. This has a beneficial
+effect on execution time:
+
+[source,bash]
+----
+$ time bb glob-uberscript.clj '*.md'
+/Users/borkdude/Dropbox/dev/clojure/carve/README.md
+bb glob-uberscript.clj '*.md'   0.02s  user 0.01s system 93% cpu 0.032 total
+----
+
+=== Uberjar
+
+Babashka can create uberjars from a given classpath and optionally a
+main method:
+
+[source,clojure]
+----
+$ cat src/foo.clj
+(ns foo (:gen-class)) (defn -main [& args] (prn :hello))
+$ bb -cp $(clojure -Spath) -m foo --uberjar foo.jar
+$ bb foo.jar
+:hello
+----
+
+When producing a classpath using the `clojure` or `deps.clj` tool,
+Clojure itself, spec and the core specs will be on the classpath and
+will therefore be included in your uberjar, which makes it bigger than
+necessary:
+
+[source,bash]
+----
+$ ls -lh foo.jar
+-rw-r--r--  1 borkdude  staff   4.5M Aug 19 17:04 foo.jar
+----
+
+To exclude these dependencies, you can use the following
+`:classpath-overrides` in your `deps.edn`:
+
+[source,clojure]
+----
+{:aliases {:remove-clojure {:classpath-overrides {org.clojure/clojure nil
+                                                  org.clojure/spec.alpha nil
+                                                  org.clojure/core.specs.alpha nil}}}}
+----
+
+[source,clojure]
+----
+$ rm foo.jar
+$ bb -cp $(clojure -A:remove-clojure -Spath) -m foo --uberjar foo.jar
+$ bb foo.jar
+:hello
+$ ls -lh foo.jar
+-rw-r--r--  1 borkdude  staff   871B Aug 19 17:07 foo.jar
+----
+
+If you want your uberjar to be compatible with the JVM, you'll need to
+compile the main namespace. Babashka does not do compilation, so we use
+Clojure on the JVM for that part:
+
+[source,clojure]
+----
+$ rm foo.jar
+$ mkdir classes
+$ clojure -e "(require 'foo) (compile 'foo)"
+foo
+$ bb -cp $(clojure -Spath):classes -m foo --uberjar foo.jar
+$ bb foo.jar
+:hello
+$ java -jar foo.jar
+:hello
+----
+
+=== System properties
+
+Babashka sets the following system properties:
+
+* `babashka.version`: the version string, e.g. `"1.2.0"`
+* `babashka.main`: the `--main` argument
+* `babashka.file`: the `--file` argument (normalized using
+`.getAbsolutePath`)
+
+=== Data readers
+
+Data readers can be enabled by setting `*data-readers*` to a hashmap of
+symbols to functions or vars:
+
+[source,clojure]
+----
+$ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
+2
+----
+
+To preserve good startup time, babashka does not scan the classpath for
+`data_readers.clj` files.
+
+=== Parsing command line arguments
+
+Babashka ships with `clojure.tools.cli`:
+
+[source,clojure]
+----
+(require '[clojure.tools.cli :refer [parse-opts]])
+
+(def cli-options
+  ;; An option with a required argument
+  [["-p" "--port PORT" "Port number"
+    :default 80
+    :parse-fn #(Integer/parseInt %)
+    :validate [#(< 0 % 0x10000) "Must be a number between 0 and 65536"]]
+   ["-h" "--help"]])
+
+(:options (parse-opts *command-line-args* cli-options))
+----
+
+[source,bash]
+----
+$ bb script.clj
+{:port 80}
+$ bb script.clj -h
+{:port 80, :help true}
+----
+
+=== Reader conditionals
+
+Babashka supports reader conditionals by taking either the `:bb` or
+`:clj` branch, whichever comes first. NOTE: the `:clj` branch behavior
+was added in version 0.0.71, before that version the `:clj` branch was
+ignored.
+
+[source,clojure]
+----
+$ bb "#?(:bb :hello :clj :bye)"
+:hello
+
+$ bb "#?(:clj :bye :bb :hello)"
+:bye
+
+$ bb "[1 2 #?@(:bb [] :clj [1])]"
+[1 2]
+----
+
+=== HTTP requests
+
+For making HTTP requests you can use:
+
+* https://github.com/borkdude/babashka.curl[babashka.curl]. This library
+is included with babashka and aliased as `curl` in the user namespace.
+The interface is similar to that of
+https://github.com/dakrone/clj-http[clj-http] but it will shell out to
+`curl` to make requests.
+* https://github.com/http-kit/http-kit[org.httpkit.client]
+* `slurp` for simple `GET` requests
+* https://github.com/babashka/clj-http-lite[clj-http-lite] as a library.
+* `clojure.java.shell` or `babashka.process` for shelling out to your
+favorite command line http client
+
+==== Choosing the right client
+
+If memory usage is a concern and you are downloading big files, choose
+`babashka.curl` with `:as :stream` over `org.httpkit.client` since
+http-kit holds the entire response in memory at once. Let's download a
+200mb file with 10mb heap size:
+
+[source,clojure]
+----
+$ bb -Xmx10m -e '(io/copy (:body (curl/get "http://ipv4.download.thinkbroadband.com/200MB.zip" {:as :stream})) (io/file "/tmp/200mb.zip"))'
+----
+
+With `babashka.curl` this works fine. However with `org.httpkit.client`
+that won't work. Not even 190mb of heap will do:
+
+[source,clojure]
+----
+$ bb -Xmx190m -e '(io/copy (:body @(org.httpkit.client/get "http://ipv4.download.thinkbroadband.com/200MB.zip" {:as :stream})) (io/file "/tmp/200mb.zip"))'
+Sun Nov 08 23:01:46 CET 2020 [client-loop] ERROR - select exception, should not happen
+java.lang.OutOfMemoryError: Array allocation too large.
+----
+
+If your script creates many requests with relatively small payloads,
+choose `org.httpkit.client` over `babashka.curl` since `babashka.curl`
+creates a `curl` process for each request.
+
+In the future babashka (1.0.0?) may come with an HTTP client based on
+the JVM 11 `java.net.http` package that ticks all the boxes (async,
+HTTP/2, websockets, multi-part file uploads, sane memory usage) and is a
+suitable replacement for all of the above options. If you know about a
+GraalVM-friendly feature-complete well-maintained library, please reach
+out!
+
+=== JDBC
+
+Babashka supports the
+https://github.com/seancorfield/next-jdbc[`next.jdbc`] library along
+with drivers for https://www.postgresql.org/[PostgresQL] and
+http://hsqldb.org/[HSQLDB]. These features are not part of the standard
+`bb` distribution but available via feature flags. See doc/build.md for
+details on how to build babashka with these features. See this
+link:test-resources/babashka/postgres_test.clj[test] for an example how
+to use this.
+
+Interacting with `psql`, `mysql` and the `sqlite` CLIs can be achieved
+by shelling out. See the examples directory.
+
