--- a/src/book.adoc
+++ b/src/book.adoc
@@ -14,14 +14,25 @@ Michiel Borkent
 ++++
 
 include::contributing.adoc[]
+
 include::intro.adoc[]
+
 include::getting_started.adoc[]
+
 include::usage.adoc[]
+
 include::style.adoc[]
+
 include::features.adoc[]
+
 include::child_processes.adoc[]
+
 include::deps_clj.adoc[]
+
 include::recipes.adoc[]
+
+include::differences.adoc[]
+
 include::license.adoc[]
 
 //include::shell_integration.adoc[]
