--- a/src/recipes.adoc
+++ b/src/recipes.adoc
@@ -56,6 +56,7 @@ $
 
 If you really want to print the nil, you can use `(prn ..)` instead.
 
+[[core_async]]
 === Core.async
 
 In addition to `future`, `pmap`, `promise` and friends, you may use the
