--- a/src/modules/ROOT/pages/usage/io-flags.adoc
+++ b/src/modules/ROOT/pages/usage/io-flags.adoc
@@ -1,4 +1,4 @@
-=== Input and output flags
+== Input and output flags
 
 In one-liners the `*input*` value may come in handy. It contains the
 input read from stdin as EDN by default. If you want to read in text,
@@ -39,13 +39,13 @@ $ echo '{:a 1} {:a 2}' | bb --stream '*input*'
 {:a 2}
 ----
 
-==== Scripts
+=== Scripts
 
 When writing scripts instead of one-liners on the command line, it is
 not recommended to use `*input*`. Here is how you can rewrite to
 standard Clojure code.
 
-==== EDN input
+=== EDN input
 
 Reading a single EDN value from stdin:
 
@@ -69,7 +69,7 @@ Reading multiple EDN values from stdin (the `-I` flag):
   (take-while #(not (identical? ::eof %)) (repeatedly #(edn/read {:eof ::eof} reader))))
 ----
 
-==== Text input
+=== Text input
 
 Reading text from stdin can be done with `(slurp *in*)`. To get a lazy
 seq of lines (the `-i` flag), you can use:
@@ -82,6 +82,6 @@ seq of lines (the `-i` flag), you can use:
 (line-seq (io/reader *in*))
 ----
 
-==== Output
+=== Output
 
 To print to stdout, use `println` for text and `prn` for EDN values.
