--- a/src/modules/ROOT/pages/usage.adoc
+++ b/src/modules/ROOT/pages/usage.adoc
@@ -1,6 +1,5 @@
 [[usage]]
-= Usage
-:page-partial:
+== Usage
 
 Typing `bb --help` from the command line will print all the available command
 line options which should give you a sense of the available features in
@@ -47,7 +46,7 @@ REPL:
 If neither -e, -f, or --socket-repl are specified, then the first argument that is not parsed as a option is treated as a file if it exists, or as an expression otherwise. Everything after that is bound to *command-line-args*. Use -- to separate script command line args from bb command line args.
 ----
 
-== Running a script
+=== Running a script
 
 Scripts may be executed from a file using `-f` or `--file`:
 
@@ -91,9 +90,7 @@ $ cat script.clj
 ("hello" "1" "2" "3")
 ----
 
-include::usage/io-flags.adoc[]
-
-== Current file path
+=== Current file path
 
 The var `*file*` contains the full path of the file that is currently
 being executed:
@@ -107,7 +104,7 @@ $ bb example.clj
 "/Users/borkdude/example.clj"
 ----
 
-== Command-line arguments
+=== Command-line arguments
 
 Command-line arguments can be retrieved using `*command-line-args*`. If
 you want to parse command line arguments, you may use the built-in
@@ -117,118 +114,7 @@ or use the
 https://github.com/borkdude/babashka/blob/master/doc/projects.md#nubankdocopt[nubank/docopt]
 library.
 
-include::usage/repl.adoc[]
-
-== Preloads
-
-The environment variable `BABASHKA_PRELOADS` allows to define code that
-will be available in all subsequent usages of babashka.
-
-[source,bash]
-----
-BABASHKA_PRELOADS='(defn foo [x] (+ x 2))'
-BABASHKA_PRELOADS=$BABASHKA_PRELOADS' (defn bar [x] (* x 2))'
-export BABASHKA_PRELOADS
-----
-
-Note that you can concatenate multiple expressions. Now you can use
-these functions in babashka:
-
-[source,bash]
-----
-$ bb '(-> (foo *input*) bar)' <<< 1
-6
-----
-
-You can also preload an entire file using `load-file`:
-
-[source,bash]
-----
-export BABASHKA_PRELOADS='(load-file "my_awesome_prelude.clj")'
-----
-
-Note that `*input*` is not available in preloads.
-
-== Classpath
-
-Babashka accepts a `--classpath` option that will be used to search for
-namespaces when requiring them:
-
-[source,clojure]
-----
-$ cat src/my/namespace.clj
-(ns my.namespace)
-(defn -main [& _args]
-  (println "Hello from my namespace!"))
-
-$ bb --classpath src --main my.namespace
-Hello from my namespace!
-----
-
-If you have a larger script with a classic Clojure project layout like
-
-[source,bash]
-----
-$ tree -L 3
-├── deps.edn
-├── README
-├── src
-│   └── project_namespace
-│       ├── main.clj
-│       └── utilities.clj
-└── test
-    └── project_namespace
-        ├── test_main.clj
-        └── test_utilities.clj
-----
-
-then you can tell babashka to include both the `src` and `test` folders
-in the classpath and start a socket REPL by running:
-
-[source,bash]
-----
-$ bb --classpath src:test --socket-repl 1666
-----
-
-Note that you can use the `clojure` tool to produce classpaths and
-download dependencies:
-
-[source,bash]
-----
-$ cat deps.edn
-{:deps
- {my_gist_script
-  {:git/url "https://gist.github.com/borkdude/263b150607f3ce03630e114611a4ef42"
-   :sha "cfc761d06dfb30bb77166b45d439fe8fe54a31b8"}}
- :aliases {:my-script {:main-opts ["-m" "my-gist-script"]}}}
-
-$ CLASSPATH=$(clojure -Spath)
-$ bb --classpath "$CLASSPATH" --main my-gist-script
-Hello from gist script!
-----
-
-If there is no `--classpath` argument, the `BABASHKA_CLASSPATH`
-environment variable will be used:
-
-[source,bash]
-----
-$ export BABASHKA_CLASSPATH=$(clojure -Spath)
-$ export BABASHKA_PRELOADS="(require '[my-gist-script])"
-$ bb "(my-gist-script/-main)"
-Hello from gist script!
-----
-
-When invoking `bb` with a main function, the expression
-`(System/getProperty "babashka.main")` will return the name of the main
-function.
-
-Also see the link:#babashka_classpath[babashka.classpath]
-namespace which allows dynamically adding to the classpath.
-
-See link:#deps_clj[deps.clj] for a babashka script that replaces the `clojure`
-bash script.
-
-== Uberscript
+=== Uberscript
 
 The `--uberscript` option collects the expressions in
 `BABASHKA_PRELOADS`, the command line expression or file, the main
@@ -292,7 +178,7 @@ bring the resources along.
 If any of the above is problematic for your project, using an
 link:#uberjar[uberjar] is a good alternative.
 
-== Carve
+=== Carve
 
 Uberscripts can be optimized by cutting out unused vars with
 https://github.com/borkdude/carve[carve].
@@ -316,7 +202,7 @@ $ time bb glob-uberscript.clj '*.md'
 bb glob-uberscript.clj '*.md'   0.02s  user 0.01s system 93% cpu 0.032 total
 ----
 
-== Uberjar
+=== Uberjar
 
 Babashka can create uberjars from a given classpath and optionally a
 main method:
@@ -378,7 +264,7 @@ $ java -jar foo.jar
 :hello
 ----
 
-== System properties
+=== System properties
 
 Babashka sets the following system properties:
 
@@ -387,7 +273,7 @@ Babashka sets the following system properties:
 * `babashka.file`: the `--file` argument (normalized using
 `.getAbsolutePath`)
 
-== Data readers
+=== Data readers
 
 Data readers can be enabled by setting `*data-readers*` to a hashmap of
 symbols to functions or vars:
@@ -401,7 +287,7 @@ $ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
 To preserve good startup time, babashka does not scan the classpath for
 `data_readers.clj` files.
 
-== Parsing command line arguments
+=== Parsing command line arguments
 
 Babashka ships with `clojure.tools.cli`:
 
