--- a/src/modules/ROOT/nav.adoc
+++ b/src/modules/ROOT/nav.adoc
@@ -1,10 +1,13 @@
 * xref:intro.adoc[Introduction]
 * xref:getting_started.adoc[Getting started]
-* xref:usage.adoc[Usage]
+* Usage
+** xref:usage.adoc[General usage]
 ** xref:usage/repl.adoc[Running a REPL]
 ** xref:usage/classpath.adoc[Classpath]
 ** xref:usage/preloads.adoc[Preloads]
 ** xref:usage/io-flags.adoc[Input and output flags]
+** xref:usage/uberscript.adoc[Uberscript]
+** xref:usage/uberjar.adoc[Uberjar]
 * xref:style.adoc[Style]
 * xref:libraries.adoc[Libraries]
 * xref:pods.adoc[Pods]
