--- a/src/modules/ROOT/pages/usage.adoc
+++ b/src/modules/ROOT/pages/usage.adoc
@@ -1,5 +1,8 @@
-[[usage]]
-== Usage
+[[general-usage]]
+== General usage
+
+[[command-line-options]]
+=== Command line options
 
 Typing `bb --help` from the command line will print all the available command
 line options which should give you a sense of the available features in
@@ -46,6 +49,7 @@ REPL:
 If neither -e, -f, or --socket-repl are specified, then the first argument that is not parsed as a option is treated as a file if it exists, or as an expression otherwise. Everything after that is bound to *command-line-args*. Use -- to separate script command line args from bb command line args.
 ----
 
+[[running-a-script]]
 === Running a script
 
 Scripts may be executed from a file using `-f` or `--file`:
@@ -104,190 +108,12 @@ $ bb example.clj
 "/Users/borkdude/example.clj"
 ----
 
-=== Command-line arguments
-
-Command-line arguments can be retrieved using `*command-line-args*`. If
-you want to parse command line arguments, you may use the built-in
-`clojure.tools.cli` namespace (see
-https://github.com/borkdude/babashka#parsing-command-line-arguments[docs])
-or use the
-https://github.com/borkdude/babashka/blob/master/doc/projects.md#nubankdocopt[nubank/docopt]
-library.
-
-=== Uberscript
-
-The `--uberscript` option collects the expressions in
-`BABASHKA_PRELOADS`, the command line expression or file, the main
-entrypoint and all required namespaces from the classpath into a single
-file. This can be convenient for debugging and deployment.
-
-Here is an example that uses a function from the
-https://github.com/clj-commons/fs[clj-commons/fs] library.
-
-Let's first set the classpath:
-
-[source,clojure]
-----
-$ export BABASHKA_CLASSPATH=$(clojure -Spath -Sdeps '{:deps {clj-commons/fs {:mvn/version "1.5.2"}}}')
-----
-
-Write a little script, say `glob.clj`:
-
-[source,clojure]
-----
-(ns foo (:require [me.raynes.fs :as fs]))
-(run! (comp println str)
-      (fs/glob (first *command-line-args*)))
-----
-
-Now we can execute the script which uses the library:
-
-[source,bash]
-----
-$ time bb glob.clj '*.md'
-/Users/borkdude/Dropbox/dev/clojure/carve/README.md
-bb glob.clj '*.md'   0.03s  user 0.02s system 70% cpu 0.064 total
-----
-
-Producing an uberscript with all required code:
-
-[source,bash]
-----
-$ bb -f glob.clj --uberscript glob-uberscript.clj
-----
-
-To prove that we don't need the classpath anymore:
-
-[source,bash]
-----
-$ unset BABASHKA_CLASSPATH
-$ time bb glob-uberscript.clj '*.md'
-/Users/borkdude/Dropbox/dev/clojure/carve/README.md
-bb glob-uberscript.clj '*.md'   0.03s  user 0.02s system 93% cpu 0.049 total
-----
-
-Caveats:
-
-* _Dynamic requires_. Building uberscripts works by running top-level
-`ns` and `require` forms. The rest of the code is not evaluated. Code
-that relies on dynamic requires may not work in an uberscript.
-* _Resources_. The usage of `io/resource` assumes a classpath, so when
-this is used in your uberscript, you still have to set a classpath and
-bring the resources along.
-
-If any of the above is problematic for your project, using an
-link:#uberjar[uberjar] is a good alternative.
-
-=== Carve
-
-Uberscripts can be optimized by cutting out unused vars with
-https://github.com/borkdude/carve[carve].
-
-[source,bash]
-----
-$ wc -l glob-uberscript.clj
-     607 glob-uberscript.clj
-$ clojure -M:carve --opts '{:paths ["glob-uberscript.clj"] :aggressive true :silent true}'
-$ wc -l glob-uberscript.clj
-     172 glob-uberscript.clj
-----
-
-Note that the uberscript became 72% shorter. This has a beneficial
-effect on execution time:
-
-[source,bash]
-----
-$ time bb glob-uberscript.clj '*.md'
-/Users/borkdude/Dropbox/dev/clojure/carve/README.md
-bb glob-uberscript.clj '*.md'   0.02s  user 0.01s system 93% cpu 0.032 total
-----
-
-=== Uberjar
-
-Babashka can create uberjars from a given classpath and optionally a
-main method:
-
-[source,clojure]
-----
-$ cat src/foo.clj
-(ns foo (:gen-class)) (defn -main [& args] (prn :hello))
-$ bb -cp $(clojure -Spath) -m foo --uberjar foo.jar
-$ bb foo.jar
-:hello
-----
-
-When producing a classpath using the `clojure` or `deps.clj` tool,
-Clojure itself, spec and the core specs will be on the classpath and
-will therefore be included in your uberjar, which makes it bigger than
-necessary:
-
-[source,bash]
-----
-$ ls -lh foo.jar
--rw-r--r--  1 borkdude  staff   4.5M Aug 19 17:04 foo.jar
-----
-
-To exclude these dependencies, you can use the following
-`:classpath-overrides` in your `deps.edn`:
-
-[source,clojure]
-----
-{:aliases {:remove-clojure {:classpath-overrides {org.clojure/clojure nil
-                                                  org.clojure/spec.alpha nil
-                                                  org.clojure/core.specs.alpha nil}}}}
-----
-
-[source,clojure]
-----
-$ rm foo.jar
-$ bb -cp $(clojure -A:remove-clojure -Spath) -m foo --uberjar foo.jar
-$ bb foo.jar
-:hello
-$ ls -lh foo.jar
--rw-r--r--  1 borkdude  staff   871B Aug 19 17:07 foo.jar
-----
-
-If you want your uberjar to be compatible with the JVM, you'll need to
-compile the main namespace. Babashka does not do compilation, so we use
-Clojure on the JVM for that part:
-
-[source,clojure]
-----
-$ rm foo.jar
-$ mkdir classes
-$ clojure -e "(require 'foo) (compile 'foo)"
-foo
-$ bb -cp $(clojure -Spath):classes -m foo --uberjar foo.jar
-$ bb foo.jar
-:hello
-$ java -jar foo.jar
-:hello
-----
-
-=== System properties
-
-Babashka sets the following system properties:
-
-* `babashka.version`: the version string, e.g. `"1.2.0"`
-* `babashka.main`: the `--main` argument
-* `babashka.file`: the `--file` argument (normalized using
-`.getAbsolutePath`)
-
-=== Data readers
-
-Data readers can be enabled by setting `*data-readers*` to a hashmap of
-symbols to functions or vars:
-
-[source,clojure]
-----
-$ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
-2
-----
-
-To preserve good startup time, babashka does not scan the classpath for
-`data_readers.clj` files.
-
 === Parsing command line arguments
+
+Command-line arguments can be retrieved using `+*command-line-args*+`. If you
+want to parse command line arguments, you may use the built-in
+`clojure.tools.cli` namespace:
+
 
 Babashka ships with `clojure.tools.cli`:
 
@@ -314,7 +140,36 @@ $ bb script.clj -h
 {:port 80, :help true}
 ----
 
-== Reader conditionals
+There is also the
+https://github.com/borkdude/babashka/blob/master/doc/projects.md#nubankdocopt[nubank/docopt]
+library that is compatible with babashka.
+
+=== System properties
+
+Babashka sets the following system properties:
+
+* `babashka.version`: the version string, e.g. `"1.2.0"`
+* `babashka.main`: the `--main` argument
+* `babashka.file`: the `--file` argument (normalized using
+`.getAbsolutePath`)
+
+In babashka you can read these properties using `System/getProperty`.
+
+=== Data readers
+
+Data readers can be enabled by setting `*data-readers*` to a hashmap of
+symbols to functions or vars:
+
+[source,clojure]
+----
+$ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
+2
+----
+
+To preserve good startup time, babashka does not scan the classpath for
+`data_readers.clj` files.
+
+=== Reader conditionals
 
 Babashka supports reader conditionals by taking either the `:bb` or
 `:clj` branch, whichever comes first. NOTE: the `:clj` branch behavior
