--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -106,17 +106,41 @@ $ bb example.clj
 "/Users/borkdude/example.clj"
 ----
 
-=== Command-line arguments
+=== Parsing command line arguments
 
-Command-line arguments can be retrieved using `*command-line-args*`. If
-you want to parse command line arguments, you may use the built-in
-`clojure.tools.cli` namespace (see
-https://github.com/borkdude/babashka#parsing-command-line-arguments[docs])
-or use the
+Command-line arguments can be retrieved using `+*command-line-args*+`. If you
+want to parse command line arguments, you may use the built-in
+`clojure.tools.cli` namespace:
+
+
+Babashka ships with `clojure.tools.cli`:
+
+[source,clojure]
+----
+(require '[clojure.tools.cli :refer [parse-opts]])
+
+(def cli-options
+  ;; An option with a required argument
+  [["-p" "--port PORT" "Port number"
+    :default 80
+    :parse-fn #(Integer/parseInt %)
+    :validate [#(< 0 % 0x10000) "Must be a number between 0 and 65536"]]
+   ["-h" "--help"]])
+
+(:options (parse-opts *command-line-args* cli-options))
+----
+
+[source,bash]
+----
+$ bb script.clj
+{:port 80}
+$ bb script.clj -h
+{:port 80, :help true}
+----
+
+There is also the
 https://github.com/borkdude/babashka/blob/master/doc/projects.md#nubankdocopt[nubank/docopt]
-library.
-
-include::usage/repl.adoc[]
+library that is compatible with babashka.
 
 === Preloads
 
