--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -7,7 +7,7 @@ babashka.
 
 [source,bash]
 ----
-Babashka v0.2.3
+Babashka v0.2.5
 
 Options must appear in the order of groups mentioned below.
 
@@ -16,18 +16,6 @@ Help:
   --help, -h or -?    Print this help text.
   --version           Print the current version of babashka.
   --describe          Print an EDN map with information about this version of babashka.
-
-In- and output flags:
-
-  -i                  Bind *input* to a lazy seq of lines from stdin.
-  -I                  Bind *input* to a lazy seq of EDN values from stdin.
-  -o                  Write lines to stdout.
-  -O                  Write EDN values to stdout.
-  --stream            Stream over lines or EDN values from stdin. Combined with -i or -I *input* becomes a single value per iteration.
-
-Uberscript:
-
-  --uberscript <file> Collect preloads, -e, -f and -m and all required namespaces from the classpath into a single executable file.
 
 Evaluation:
 
@@ -43,7 +31,30 @@ REPL:
   --socket-repl       Start socket REPL. Specify port (e.g. 1666) or host and port separated by colon (e.g. 127.0.0.1:1666).
   --nrepl-server      Start nREPL server. Specify port (e.g. 1667) or host and port separated by colon (e.g. 127.0.0.1:1667).
 
-If neither -e, -f, or --socket-repl are specified, then the first argument that is not parsed as a option is treated as a file if it exists, or as an expression otherwise. Everything after that is bound to *command-line-args*. Use -- to separate script command line args from bb command line args.
+In- and output flags:
+
+  -i                  Bind *input* to a lazy seq of lines from stdin.
+  -I                  Bind *input* to a lazy seq of EDN values from stdin.
+  -o                  Write lines to stdout.
+  -O                  Write EDN values to stdout.
+  --stream            Stream over lines or EDN values from stdin. Combined with -i or -I *input* becomes a single value per iteration.
+
+Uberscript:
+
+  --uberscript <file> Collect preloads, -e, -f and -m and all required namespaces from the classpath into a single file.
+
+Uberjar:
+
+  --uberjar    <jar>  Similar to --uberscript but creates jar file.
+
+Clojure:
+
+  --clojure [args...] Invokes clojure. Takes same args as the official clojure CLI.
+
+If the first argument is not any of the above options, then it treated as a file if it exists, or as an expression otherwise.
+Everything after that is bound to *command-line-args*.
+
+Use -- to separate script command line args from bb command line args.
 ----
 
 === Running a script
@@ -425,33 +436,6 @@ $ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
 
 To preserve good startup time, babashka does not scan the classpath for
 `data_readers.clj` files.
-
-=== Parsing command line arguments
-
-Babashka ships with `clojure.tools.cli`:
-
-[source,clojure]
-----
-(require '[clojure.tools.cli :refer [parse-opts]])
-
-(def cli-options
-  ;; An option with a required argument
-  [["-p" "--port PORT" "Port number"
-    :default 80
-    :parse-fn #(Integer/parseInt %)
-    :validate [#(< 0 % 0x10000) "Must be a number between 0 and 65536"]]
-   ["-h" "--help"]])
-
-(:options (parse-opts *command-line-args* cli-options))
-----
-
-[source,bash]
-----
-$ bb script.clj
-{:port 80}
-$ bb script.clj -h
-{:port 80, :help true}
-----
 
 === Reader conditionals
 
