--- a/src/book.adoc
+++ b/src/book.adoc
@@ -28,7 +28,8 @@ include::pods.adoc[]
 
 include::child_processes.adoc[]
 
-include::deps_clj.adoc[]
+// deps.clj has been replaced with babashka.deps
+// include::deps_clj.adoc[]
 
 include::recipes.adoc[]
 
