--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -79,7 +79,7 @@ $ ./download_html.clj
 Usage: <url> <file>
 
 $ ./download_html.clj https://www.clojure.org /tmp/clojure.org.html
-Fetching url: https://www.clojure.org
+Downloading url: https://www.clojure.org
 Writing file: /tmp/clojure.org.html
 ----
 
